# llm-verify

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  test_all_models.py  test_deep_analysis.py  view_results.py
.copilot/: context.md
.github/: copilot-instructions.md
alembic/: env.py
src/: __init__.py  config.py  database.py  main.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  generic_adapter.py  openai_adapter.py
src/handlers/: __init__.py  analysis.py  benchmarks.py  results.py
src/models/: __init__.py  benchmark.py  result.py
src/prompts/: __init__.py  capability.py  fingerprint.py  identity.py
src/repositories/: __init__.py  benchmark_repo.py  result_repo.py
src/schemas/: __init__.py  analysis.py  benchmark.py  result.py
src/services/: __init__.py  benchmark_runner.py  deep_analysis.py  fingerprint.py  model_comparator.py
tests/: conftest.py  test_benchmark_runner.py  test_model_comparator.py
tests/test_adapters/: test_generic_adapter.py
